--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -322,24 +322,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.1            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.1              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -5043,55 +5044,100 @@ You can visualize any \(\delta\) value (i.e., population \(d\)-value) using the 
 \hypertarget{samples}{%
 \chapter{Samples}\label{samples}}
 
-Researchers are usually interested in the describing the attributes of a population; numbers that describe the population are called parameters. Two parameters that are frequently of interest are the mean and variance of the population. Unfortunately, it's rarely possible to obtain information from every member of a population to calculate a parameter. Consequently, researchers use subsets of the population called samples to estimate parameters. Numbers calculated from sample data are called statistics. Typically, sample statistics are used to estimate population parameters.
+Researchers are usually interested in describing the attributes of a population; numbers that describe the population are called parameters. Two parameters that are frequently of interest are the mean and variance of the population. Unfortunately, it's rarely possible to obtain information from every member of a population to calculate a parameter. Consequently, researchers use subsets of the population called samples to estimate parameters. Numbers calculated from sample data are called statistics. Typically, sample statistics are used to estimate population parameters.
 
-Sample statistics, however, often differ from population parameters. The difference between a sample statistic and the population parameter occurs because the sample data is random subset of the population data --- with correspondingly few observations. Sometimes the sample statistic will be higher than the population parameter; other times the sample statistic will be lower than the population parameter. Because random sampling is used to select the sample data the direction and magnitude of the difference between the sample statistic the population parameter will vary randomly.
+Sample statistics, however, often differ from population parameters. The difference between a sample statistic and the population parameter occurs because the sample data is random subset of the population data --- with correspondingly fewer observations. Sometimes the sample statistic will be higher than the population parameter; other times the sample statistic will be lower than the population parameter. Because random sampling is used to select the sample data the direction and magnitude of the difference between the sample statistic the population parameter will vary randomly.
 
-Further complicating matter is the fact that the formula used for a sample statistic may or may not be the same as the formula used for the corresponding population parameter. This occurs because the purpose of the sample statistic is usually not to describe the sample. Rather the purpose of the sample statistic is to estimate the population parameter. Depending on the parameter, you may or may not be able to use the same formula with sample data as your would with the population data.
+Further complicating matters is the fact that the formula used for a sample statistic may or may not be the same as the formula used for the corresponding population parameter. This occurs because the purpose of the sample statistic is typically not to describe the sample. Rather the purpose of the sample statistic is to estimate the population parameter. Depending on the parameter, you may or may not be able to use the same formula with sample data as you would with population data.
 
 \hypertarget{notation-1}{%
 \section{Notation}\label{notation-1}}
 
-In the formulas below, when we refer the population, we use uppercase letters when indicating members (\(X\)) or the size (\(N\)). In contrast, when we refer to the sample, we use lowercsae letters when indicating members (\(x\)) or the size (\(n\)).
+In the formulas below, when we refer the population, we use uppercase letters when indicating members (\(X\)) or the size (\(N\)). In contrast, when we refer to the sample, we use lowercsae letters when indicating members (\(x\)) or the size (\(n\)). Make sure you notice the similarities between population and sample formulas even when the notation differs.
 
 \hypertarget{estimating-the-mean}{%
 \section{Estimating the mean}\label{estimating-the-mean}}
 
-We begin with the simple case of using a sample mean to estimate population mean. This is a simple case because the same formula can be use at both the sample and population levels.
+We are interested in sample means (\(\bar{x}\)) to the extent that they provide an estimate of the population mean (\(\mu\)).
 
-The population mean, \(\mu\), is a parameter calculated using the formula below:
+The population mean, \(\mu\), is a parameter calculated using Formula \eqref{eq:popmeanch5}
 
-\[
-\begin{aligned} 
-\mu &= \frac{\sum{X}}{N} \\
-\end{aligned} 
-\]
+\begin{equation} 
+\mu = \frac{\sum{X}}{N}
+      \label{eq:popmeanch5}
+\end{equation}
 
-The sample mean, \(\bar{x}\), is a statistic calculated using the formula below. The bar of above the \(x\), indicates that it is a mean.
+The sample mean, \(\bar{x}\), is a statistic calculated using the using Formula \eqref{eq:samplemeanch5}. The bar of above the \(x\), indicates that it is a mean. Notice that the two formulas are the same - even though they use different notation.
 
-\[
-\begin{aligned} 
-\bar{x} &= \frac{\sum{x}}{n} \\
-\end{aligned} 
-\]
+\begin{equation} 
+\bar{x} = \frac{\sum{x}}{n}
+      \label{eq:samplemeanch5}
+\end{equation}
 
-A sample mean is calculated using sample data which is a random subset of the population. Consequently, the sample mean (a statistic) is likely to differ the population mean (a parameter). This difference between the sample mean and the population mean could potentially be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies.
+A sample mean is calculated using sample data which is a random subset of the population. Consequently, the sample mean (a statistic) is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful form a single study, the fact that sample means differ from the popualtion mean could potentially be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies.
 
-\hypertarget{bias}{%
-\subsection{Bias}\label{bias}}
+One way of assessing the quality of the sample mean as an estimate of the population mean is by examining bias. If the average of many sample means is equal to the population mean, then we consider the sample mean to be an unbiased estimator of the population mean.
 
-One way of assessing the quality of the sample mean as an estimate of the population mean is by examining bias. If the average of many sample means corresponds is equal to the population mean, then we consider the sample mean an unbiased estimator.
+Fortunately, the average of many sample means does equal the population mean - so the sample mean is an unbiased estimator of the population mean. This fact can be illustrated with a computer simulation.
 
-The fact that the sample mean provides an unbiased estimate of the population mean can be illustrated with a computer simulation.
+We begin by activating the required packages:
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \KeywordTok{library}\NormalTok{(tidyverse)}
 \KeywordTok{library}\NormalTok{(learnSampling)}
+\end{Highlighting}
+\end{Shaded}
 
+Next, we create a large population with 100,000 people using the get\_height\_population() command:
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \NormalTok{pop_data <-}\StringTok{ }\KeywordTok{get_height_population}\NormalTok{() }
 \end{Highlighting}
 \end{Shaded}
+
+The glimpse() command can be used to confirm that the population contains 100,000 people.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{glimpse}\NormalTok{(pop_data)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 100,000
+## Columns: 3
+## $ id     <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 1...
+## $ sex    <chr> "male", "female", "female", "male", "mal...
+## $ height <dbl> 177, 150, 171, 157, 169, 187, 163, 173, ...
+\end{verbatim}
+
+We can use the head() command to illustrate that each row in pop\_data represents a single person.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{head}\NormalTok{(pop_data, }\DecValTok{10}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 10 x 3
+##       id sex    height
+##    <int> <chr>   <dbl>
+##  1     1 male      177
+##  2     2 female    150
+##  3     3 female    171
+##  4     4 male      157
+##  5     5 male      169
+##  6     6 male      187
+##  7     7 female    163
+##  8     8 male      173
+##  9     9 female    172
+## 10    10 male      193
+\end{verbatim}
+
+We can use tidyverse commands to determine the mean of the population (\(\mu\)):
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5106,7 +5152,9 @@ The fact that the sample mean provides an unbiased estimate of the population me
 ## 1    172.5
 \end{verbatim}
 
-We can illustrate how random sampling works, with respect to estimating the population mean, by taking a large number of samples from the population. In the code below, we use the get\_M\_samples() command to obtain 5000 samples, each composed of 10 people. For each of these 5000 samples we calculate a variety of statistics and place themm in the many\_samples data frame.
+We see that the mean of the population is \(\mu = 172.48\). We can illustrate how random sampling works, with respect to estimating this population mean, by taking a large number of samples from the population.
+
+In the code below, we use the get\_M\_samples() command to obtain 5000 samples, each composed of 10 people. For each of these 5000 samples we calculate a variety of statistics and place themm in the many\_samples data frame. Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic or the population parameter the statistic is estimating.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5129,31 +5177,20 @@ We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 sam
 \end{Shaded}
 
 \begin{verbatim}
-##    sample.number  n pop.M sample.M pop.var sample.var.n
-## 1              1 10 172.5    175.5   157.5       189.85
-## 2              2 10 172.5    169.6   157.5       196.64
-## 3              3 10 172.5    161.7   157.5        92.61
-## 4              4 10 172.5    178.4   157.5       102.04
-## 5              5 10 172.5    174.7   157.5       350.81
-## 6              6 10 172.5    166.0   157.5       236.00
-## 7              7 10 172.5    172.4   157.5       149.84
-## 8              8 10 172.5    175.3   157.5       179.81
-## 9              9 10 172.5    167.2   157.5       128.96
-## 10            10 10 172.5    169.0   157.5        75.20
-##    sample.var.n_1
-## 1          210.94
-## 2          218.49
-## 3          102.90
-## 4          113.38
-## 5          389.79
-## 6          262.22
-## 7          166.49
-## 8          199.79
-## 9          143.29
-## 10          83.56
+##     n pop.M sample.M pop.var sample.var.n sample.var.n_1
+## 1  10 172.5    174.3   157.5        27.81          30.90
+## 2  10 172.5    161.8   157.5        83.36          92.62
+## 3  10 172.5    173.2   157.5       139.16         154.62
+## 4  10 172.5    180.0   157.5       321.80         357.56
+## 5  10 172.5    172.8   157.5       160.96         178.84
+## 6  10 172.5    172.0   157.5       159.60         177.33
+## 7  10 172.5    166.5   157.5        86.45          96.06
+## 8  10 172.5    173.5   157.5       139.45         154.94
+## 9  10 172.5    177.7   157.5       167.01         185.57
+## 10 10 172.5    168.5   157.5       262.65         291.83
 \end{verbatim}
 
-You can see the for each sample we indicate n (the sample size), pop.M (the mean of the population), sample.M (the mean of the sample), and a few other statistics. Because all the sample came from the same population you can that the population mean (pop.M) is constant across rows/samples. In contrast, the sample mean (sample.M) varies across samples due to random sampling error.
+You can see the for each sample we indicate n (the sample size), pop.M (the mean of the population), sample.M (the mean of the sample), and a few other statistics. Because all the samples came from the same population you can that the population mean (pop.M) is constant across rows/samples. In contrast, the sample mean (sample.M) varies across samples due to random sampling error.
 
 You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.M column and then we send them to the base R hisogram command, hist().
 
@@ -5165,9 +5202,9 @@ You can see the full extent to which the sample means vary by creating a graph w
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-212-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-215-1.pdf}
 
-You can see the 5000 sample means plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantialy from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size.
+You can see the 5000 sample means plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantially from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size.
 
 Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample deviates from the popualtion mean. That said, statisticians are very concerned whether the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean. If, on average, the sample mean is accurate we refer to it as an unbiased estimator.
 
@@ -5182,41 +5219,53 @@ In the code below we calculate the average of the 5000 sample means to determine
 
 \begin{verbatim}
 ##   mean_of_sample.M
-## 1            172.5
+## 1            172.4
 \end{verbatim}
 
-We find that the average of the 5000 sample mean is 172.55 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean as we did the population mean. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean.
+We find that the average of the 5000 sample means is 172.47 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean as we did the population mean. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean. If we try to estimate the population mean with a sample mean we will, on average, be correct; although any given sample/study mean might be ``wrong''.
 
 \hypertarget{estimating-variance}{%
 \section{Estimating variance}\label{estimating-variance}}
 
-Now we move to the more complex case of estimating the population variance using sample data. The population variance, \(\sigma^2\), is a parameter calculated using the formula below:
+We are interested in sample variances (\(s^2\)) to the extent that they provide an estimate of the population mean (\(\sigma^2\)). Recall, the population variance, \(\sigma^2\), is a parameter calculated using Formula \eqref{eq:popvarch5}.
 
-\[
-\begin{aligned} 
-\sigma^2 &= \frac{\sum{(X - \mu)^2}}{N}\\
-\end{aligned} 
-\]
+\begin{equation} 
+\sigma^2 = \frac{\sum{(X - \mu)^2}}{N}
+      \label{eq:popvarch5}
+\end{equation}
 
-The sample variance, \(s^2\), is a statistic calculated using the formula below. The formula is the same as at the population level but we use a different notation because it is a sample.
+The sample variance, \(s^2\), is a statistic calculated using Formula \eqref{eq:samplevarnch5}. The formula is the same as at the population level but we use a different notation because it is a sample.
 
-\[
-\begin{aligned} 
-s^2 &= \frac{\sum{(x - \bar{x})^2}}{n}\\
-\end{aligned} 
-\]
+\begin{equation} 
+s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
+      \label{eq:samplevarnch5}
+\end{equation}
 
-A sample mean is calculated using sample data which is a random subset of the population. Consequently, the sample mean (a statistic) is likely to differ the population mean (a parameter). This difference between the sample mean and the population mean could potentially be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies.
+Examine the output for 5000 samples we created using the head() command. Notice in this output we see the population variance is 157.46 (see the pop.var column). The values in this column were calculated, based on everyone in the poulation, using Formula \eqref{eq:popvarch5}.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{pull}\NormalTok{(sample.var.n) }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{hist}\NormalTok{(}\DataTypeTok{main =} \StringTok{"Histogram of Sample Variance using n"}\NormalTok{)}
+\KeywordTok{head}\NormalTok{(many_samples, }\DecValTok{10}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-214-1.pdf}
+\begin{verbatim}
+##     n pop.M sample.M pop.var sample.var.n sample.var.n_1
+## 1  10 172.5    174.3   157.5        27.81          30.90
+## 2  10 172.5    161.8   157.5        83.36          92.62
+## 3  10 172.5    173.2   157.5       139.16         154.62
+## 4  10 172.5    180.0   157.5       321.80         357.56
+## 5  10 172.5    172.8   157.5       160.96         178.84
+## 6  10 172.5    172.0   157.5       159.60         177.33
+## 7  10 172.5    166.5   157.5        86.45          96.06
+## 8  10 172.5    173.5   157.5       139.45         154.94
+## 9  10 172.5    177.7   157.5       167.01         185.57
+## 10 10 172.5    168.5   157.5       262.65         291.83
+\end{verbatim}
+
+Now inspect the sample.var.n column the values in this column were calculated based on sample data using Formula \eqref{eq:samplevarnch5}. In this column we present the sample variance calculated, using the above formula, with \(n\) in the denominator. That is, in this column we have calculated sample variance using the same formula (but with different notation) as we used at the population level. Notice the values in the sample.var.n column vary due to random sampling.
+
+As we did with the mean, we can take the average of the 5000 sample variances (each using \(n\) in the denominator) to determine if the sample variance provides a biased or unbiased estimate of the population variance.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5227,8 +5276,43 @@ A sample mean is calculated using sample data which is a random subset of the po
 
 \begin{verbatim}
 ##   mean_of_var.n
-## 1         141.9
+## 1         141.1
 \end{verbatim}
+
+We find that the average of the 5000 sample variances is 141.86 which is not close to the population variance of 157.46. Note that when we did this, we used the same formula to calculate the sample variance as we did the population variance.
+
+The average of the sample variances (141.86) was different from the population variancee (157.46). The average of the sample variance was much smaller than the population variance. Consequently, the sample variance provides a biased estimate of the population variance. If we try to estimate the population variance with a sample variance we will, on average, be wrong.
+
+Fortunately, there is a way around the fact that the sample variance provides a biased estimate of the population variance. We can derive a formula at the sample level that estimate the population variance that is not biased (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by \(n - 1\) instead of \(n\). The unbiased estimate is calculated using Formula \eqref{eq:samplevarn1ch5}.
+
+\begin{equation} 
+s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}
+      \label{eq:samplevarn1ch5}
+\end{equation}
+
+The values in the sample.var.n\_1 column were calculated, based on sample data, using Formula \eqref{eq:samplevarn1ch5}. Check out this column using the head() command:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{head}\NormalTok{(many_samples, }\DecValTok{10}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##     n pop.M sample.M pop.var sample.var.n sample.var.n_1
+## 1  10 172.5    174.3   157.5        27.81          30.90
+## 2  10 172.5    161.8   157.5        83.36          92.62
+## 3  10 172.5    173.2   157.5       139.16         154.62
+## 4  10 172.5    180.0   157.5       321.80         357.56
+## 5  10 172.5    172.8   157.5       160.96         178.84
+## 6  10 172.5    172.0   157.5       159.60         177.33
+## 7  10 172.5    166.5   157.5        86.45          96.06
+## 8  10 172.5    173.5   157.5       139.45         154.94
+## 9  10 172.5    177.7   157.5       167.01         185.57
+## 10 10 172.5    168.5   157.5       262.65         291.83
+\end{verbatim}
+
+We can evaluate the quality of Formula \eqref{eq:samplevarn1ch5}, using \(n-1\), by averaging over values in the sample.var.n\_1 column.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5239,8 +5323,156 @@ A sample mean is calculated using sample data which is a random subset of the po
 
 \begin{verbatim}
 ##   mean_of_var.n_1
-## 1           157.6
+## 1           156.7
 \end{verbatim}
+
+We see that the average of the 5000 values using \(n-1\) in the denominator is 157.62 which is very close to the population varaince of 157.46. Consequently, we when we use \(n-1\) in the denominator we have an unbiased estimate of the population variance. If we try to estimate the population variance with a sample variance, using \(n-1\) in the denominator, we will, on average, be right.
+
+You may wonder at this point, when we use \(n-1\) in the denominator of the sample variance, can we still think of it as the average of the squared deviations from the mean. The short answer is yes. When you use \(n-1\) in the denominator of the sample variance you are not calculating the variance for the group people in the sample. Rather, you are estimating the variance for the much larger group of people in the population. Consequently, it makes sense to think of sample variance, using \(n-1\), as an estimate of the average of the squared errors in the population. That is, it makes sense to think of sample variance, using \(n-1\), as an estimate of the average of the squared differences between each person in the population and the population mean.
+
+\hypertarget{estimating-standard-deviation}{%
+\section{Estimating standard deviation}\label{estimating-standard-deviation}}
+
+Due to the above findings for variance, we tend to estimate the population standard deviation using Formula \eqref{eq:samplesd1ch5}.
+
+\begin{equation} 
+s = \sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}
+      \label{eq:samplesd1ch5}
+\end{equation}
+
+\hypertarget{estimating-smd}{%
+\section{Estimating SMD}\label{estimating-smd}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{female_pop_data <-}\StringTok{ }\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }\KeywordTok{filter}\NormalTok{(sex }\OperatorTok{==}\StringTok{ "female"}\NormalTok{)}
+\NormalTok{male_pop_data <-}\StringTok{ }\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }\KeywordTok{filter}\NormalTok{(sex }\OperatorTok{==}\StringTok{ "male"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+For females:
+
+\[
+\begin{aligned} 
+\mu_{female} &= 165 \\
+\sigma_{female} &= 10\\
+\end{aligned} 
+\]
+
+For males:
+
+\[
+\begin{aligned} 
+\mu_{male} &= 180 \\
+\sigma_{male} &= 10\\
+\end{aligned} 
+\]
+
+\begin{figure}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption{Illustration of the standardized mean difference of 1.50 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
+\end{figure}
+
+\hypertarget{population-smd}{%
+\subsection{Population SMD}\label{population-smd}}
+
+In original units:
+\[
+\begin{aligned} 
+\Delta M &= (\mu_{male} - \mu_{female}) \\
+&= (180 - 165) \\
+&= 15 \\
+\end{aligned} 
+\]
+
+Formula \eqref{eq:popsmdch5} below illustrates\ldots.
+
+\begin{equation} 
+\delta  = \frac{(\mu_{male} - \mu_{female})}{\sigma} 
+      \label{eq:popsmdch5}
+\end{equation}
+
+Calculation:
+
+\[
+\begin{aligned} 
+\delta  &= \frac{(\mu_{male} - \mu_{female})}{\sigma} \\
+&= \frac{(180 - 165)}{10} \\
+&= \frac{15}{10} \\
+&= 1.50 \\
+\end{aligned} 
+\]
+
+\hypertarget{sample-smd}{%
+\subsection{Sample SMD}\label{sample-smd}}
+
+Formula \eqref{eq:samplesmdch5} below illustrates\ldots.
+
+\begin{equation} 
+d  = \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}} 
+      \label{eq:samplesmdch5}
+\end{equation}
+
+\hypertarget{estimating-means}{%
+\subsubsection{Estimating means}\label{estimating-means}}
+
+\hypertarget{estimating-variance-1}{%
+\subsubsection{Estimating variance}\label{estimating-variance-1}}
+
+\begin{figure}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/pool1} \caption{The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. }\label{fig:pool1}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/pool2} \caption{We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.}\label{fig:pool2}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/pool3} \caption{We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal, we need to use a more sophisticated formula to obtain the pooled variance.}\label{fig:pool3}
+\end{figure}
+
+\hypertarget{combining-everything}{%
+\subsubsection{Combining everything}\label{combining-everything}}
+
+\[
+\begin{aligned} 
+d  &= \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}} \\
+\end{aligned} 
+\]
+
+\hypertarget{overview}{%
+\section{Overview}\label{overview}}
+
+\begin{longtable}[]{@{}ll@{}}
+\toprule
+\begin{minipage}[b]{0.47\columnwidth}\raggedright
+Parameter\strut
+\end{minipage} & \begin{minipage}[b]{0.47\columnwidth}\raggedright
+Estimated by this statistic\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(\mu = \frac{\sum{X}}{N}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(\bar{x} = \frac{\sum{x}}{n}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(\sigma^2 = \frac{\sum{(X - \mu)^2}}{N}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(\sigma = \sqrt{\frac{\sum{(X - \mu)^2}}{N}}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(s =\sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(\delta= \frac{\mu_{1} - \mu_{2}}{\sigma}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\(d = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}\)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
 
 \cleardoublepage
 
