--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -322,25 +322,24 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rsconnect_0.8.16        
-##   rstudioapi_0.11          rvest_0.3.5             
-##   scales_1.1.1             selectr_0.4.2           
-##   sem_3.1.11               semTools_0.5.3          
-##   skimr_2.1.1              snakecase_0.11.0        
-##   splines_4.0.2            StanHeaders_2.21.0.5    
-##   statmod_1.4.34           stats_4.0.2             
-##   stats4_4.0.2             stringi_1.4.6           
-##   stringr_1.4.0            survival_3.1-12         
-##   sys_3.3                  testthat_2.3.2          
-##   tibble_3.0.1             tidyr_1.1.0             
-##   tidyselect_1.1.0         tidyverse_1.3.0         
-##   tinytex_0.23             tmvnsim_1.0-2           
-##   tools_4.0.2              utf8_1.1.4              
-##   utils_4.0.2              vctrs_0.3.1             
-##   viridis_0.5.1            viridisLite_0.3.0       
-##   whisker_0.4              withr_2.2.0             
-##   xfun_0.14                xml2_1.3.2              
-##   yaml_2.2.1
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.1            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.1              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -5442,33 +5441,43 @@ d  &= \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}} \\
 \hypertarget{overview}{%
 \section{Overview}\label{overview}}
 
-\begin{longtable}[]{@{}ll@{}}
+\begin{longtable}[]{@{}lll@{}}
 \toprule
-\begin{minipage}[b]{0.47\columnwidth}\raggedright
+\begin{minipage}[b]{0.30\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.30\columnwidth}\raggedright
 Parameter\strut
-\end{minipage} & \begin{minipage}[b]{0.47\columnwidth}\raggedright
+\end{minipage} & \begin{minipage}[b]{0.30\columnwidth}\raggedright
 Estimated by this statistic\strut
 \end{minipage}\tabularnewline
 \midrule
 \endhead
-\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
+Mean\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\mu = \frac{\sum{X}}{N}\)\strut
-\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\bar{x} = \frac{\sum{x}}{n}\)\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
+Variance\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\sigma^2 = \frac{\sum{(X - \mu)^2}}{N}\)\strut
-\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}\)\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
+Standard deviation\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\sigma = \sqrt{\frac{\sum{(X - \mu)^2}}{N}}\)\strut
-\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(s =\sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}\)\strut
 \end{minipage}\tabularnewline
-\begin{minipage}[t]{0.47\columnwidth}\raggedright
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
+Cohen's \(d\) or SMD\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\delta= \frac{\mu_{1} - \mu_{2}}{\sigma}\)\strut
-\end{minipage} & \begin{minipage}[t]{0.47\columnwidth}\raggedright
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(d = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}\)\strut
 \end{minipage}\tabularnewline
 \bottomrule
